kubernetes/ocp-gpu/applications/aap/2-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: aap-external
  annotations:
    # Default cert only covers apps.ocp-home.rh-lab.morey.tech, so this needs a custom one.
    # Uses cert-manager/openshift-routes annotations.
    # https://github.com/cert-manager/openshift-routes?tab=readme-ov-file#usage
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod
spec:
  host: aap.morey.tech
  path: /
  to:
    kind: Service
    name: aap
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
